Token service added

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,5 +7,7 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data source=masseurappointment.db"
-  }
+  },
+  "TokenKey": "Secure token key Secure token key Secure token key Secure token key",
+  "TokenLifeTimeSec": "93600"
 }
