replace sqlite by postgresql + actions for deploying

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data source=masseurappointment.db"
+    "DefaultConnection": "Server=localhost; Port=5432; User Id=postgres; Password=password; Database=datingapp"
   },
   "TokenKey": "Secure token key Secure token key Secure token key Secure token key",
   "TokenLifeTimeSec": "93600"
